# HW5-NW

./: Pipfile  README.md  main.py  pyproject.toml
.github/workflows/: test.yml
align/: align.py
test/: test_align.py
