[build-system]
requires = ["flit_core >=3.4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["test"]

[project]
name = "align"
authors = [{name = "Isobel Beasley", email = "isobel.beasley@ucsf.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">= 3.10"
dependencies = [
    "pytest>=3.0",
    "numpy>=1.20.1"
]

#[tool.flit.metadata]
#description-file = "DESCRIPTION.txt" 

[project.urls]
Home = "https://github.com/IJbeasley/HW5-NW"

